--- a/src/main/webapp/css/cfRecipeIndex.css
+++ b/src/main/webapp/css/cfRecipeIndex.css
@@ -1,14 +1,17 @@
 @charset "UTF-8";
+
 @font-face {
-    font-family: 'HakgyoansimByeoljariTTF-B';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimByeoljariTTF-B.woff2') format('woff2');
-    font-weight: 700;
-    font-style: normal;
-    font-size: 50px;
+	font-family: 'HakgyoansimByeoljariTTF-B';
+	src:
+			url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimByeoljariTTF-B.woff2')
+			format('woff2');
+	font-weight: 700;
+	font-style: normal;
+	font-size: 50px;
 }
-body{
-	font-family: 'HakgyoansimByeoljariTTF-B',
-	sans-serif !important;
+
+body {
+	font-family: 'HakgyoansimByeoljariTTF-B', sans-serif !important;
 }
 /* GNB */
 .gnb {
@@ -73,43 +76,47 @@ body{
 	}
 }
 /*--------------------------------------------------------------------gnb배너입니다--------------------------------------------------------*/
-.recipe-index-container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
+.recipe-index-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin-top: 50px;
 }
-.recipe-index{
-    max-width: 90%;
-    border: 3px solid #ddd;
-    max-width: 200px;
-    min-height: 300px; 
-    flex-shrink: 0;
-    flex-grow: 0;
-    margin: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+
+.recipe-index {
+	max-width: 90%;
+	border: 3px solid #ddd;
+	max-width: 200px;
+	min-height: 300px;
+	flex-shrink: 0;
+	flex-grow: 0;
+	margin: 10px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
-.recipe-image{
-    width:200px;
-    height:200px;
-    background-color: aqua;
+
+.recipe-image {
+	width: 200px;
+	height: 200px;
+	background-color: aqua;
 }
-.title-container{
-    display: flex;
-    justify-content: left;
-    margin:1% 5%;
-    padding-top: 10%;
-    padding-left: 5%;
-    padding-bottom:3%;
-    background-color:black;
-    color:white;
+
+.title-container {
+	display: flex;
+	justify-content: left;
+	margin: 1% 5%;
+	padding-top: 10%;
+	padding-left: 5%;
+	padding-bottom: 3%;
+	background-color: black;
+	color: white;
 }
-.title{
-    font-size: 50px;
+
+.title {
+	font-size: 50px;
 }
 /*------------------------------------------------------모달창 디자인입니다.,-------------------------------------------------------*/
 .recipe-info-modal {
@@ -142,4 +149,17 @@ body{
 	max-width: 600px;
 	flex-wrap: wrap;
 	justify-content: center;
+}
+
+@media (min-width: 769px) {
+	.recipe-index {
+		width: calc(33.33% - 20px); /* (100% / 3) - 양쪽 마진 10px씩 = 20px */
+	}
+}
+
+/* 더 큰 화면에서는 4열로 표시 (선택 사항) */
+@media (min-width: 1024px) {
+	.recipe-index {
+		width: calc(25% - 20px); /* (100% / 4) - 양쪽 마진 10px씩 = 20px */
+	}
 }
